--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=22w44a
-yarn_mappings=22w44a+build.7
-loader_version=0.14.10
-fabric_version=0.65.3+1.19.3
+minecraft_version=1.19.3
+yarn_mappings=1.19.3+build.3
+loader_version=0.14.11
+fabric_version=0.69.1+1.19.3
 
 # Mod Properties
 mod_version=0.5.0
