--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.1
-loader_version=0.14.11
-fabric_version=0.68.1+1.19.3
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.10
+loader_version=0.14.12
+fabric_version=0.42.0+1.16
 
 # Mod Properties
-mod_version=0.4.8
+mod_version=0.4.8-backport-1.16.5
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
