Reduce setup time and overdraw by rasterizing quads

--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -3,6 +3,7 @@ members = [ "harness", "rasterizer", "jni" ]
 
 [profile.release]
 lto = true
+debug = 1
 
 [profile.production]
 inherits = "release"
