add the native path to runClient

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,10 @@ java {
     withSourcesJar()
 }
 
+runClient {
+    systemProperty 'java.library.path', "$projectDir/native/target/release"
+}
+
 jar {
     from "LICENSE.txt"
 }
