--- a/native/jni/Cargo.toml
+++ b/native/jni/Cargo.toml
@@ -9,3 +9,6 @@ crate-type = ["cdylib"]
 [dependencies]
 rasterizer = { path = "../rasterizer" }
 ultraviolet = "0.9.0"
+
+[features]
+stats = ["rasterizer/stats"]
