--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.1
-loader_version=0.14.11
-fabric_version=0.68.1+1.19.3
+minecraft_version=23w07a
+yarn_mappings=23w07a+build.7
+loader_version=0.14.14
+fabric_version=0.74.1+1.19.4
 
 # Mod Properties
 mod_version=0.4.10
