--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=23w07a
-yarn_mappings=23w07a+build.7
-loader_version=0.14.14
+minecraft_version=1.19.4-pre1
+yarn_mappings=1.19.4-pre1+build.1
+loader_version=0.14.15
 fabric_version=0.74.1+1.19.4
 
 # Mod Properties
