--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.1
-loader_version=0.14.11
-fabric_version=0.68.1+1.19.3
+minecraft_version=1.19.4-pre3
+yarn_mappings=1.19.4-pre3+build.4
+loader_version=0.14.17
+fabric_version=0.75.2+1.19.4
 
 # Mod Properties
-mod_version=0.4.9
+mod_version=0.4.10
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
