--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.4-pre3
-yarn_mappings=1.19.4-pre3+build.4
+minecraft_version=1.19.4-rc1
+yarn_mappings=1.19.4-rc1+build.1
 loader_version=0.14.17
-fabric_version=0.75.2+1.19.4
+fabric_version=0.75.3+1.19.4
 
 # Mod Properties
 mod_version=0.4.10
