--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.4-pre3
-yarn_mappings=1.19.4-pre3+build.3
+minecraft_version=23w12a
+yarn_mappings=23w12a+build.1
 loader_version=0.14.17
 fabric_version=0.75.1+1.19.4
 
