--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import net.fabricmc.loom.task.RemapJarTask
-
 plugins {
     id 'fabric-loom' version '1.0-SNAPSHOT'
     id 'org.ajoberstar.grgit' version '4.1.0'
@@ -40,20 +38,20 @@ sourceSets {
 }
 
 tasks.register('apiJar', Jar) {
-    classifier "api-dev"
-
-    from sourceSets.api.output
-}
-
-tasks.register('remapApiJar', RemapJarTask) {
+    dependsOn(remapJar)
     classifier "api"
 
-    input = apiJar.archiveFile.get().asFile
-    addNestedDependencies = false
+    from(zipTree(remapJar.getOutputs().getFiles().first())) {
+        include("LICENSE.txt")
+        include("net/caffeinemc/mods/sodium/api/**")
+    }
+
+    manifest {
+        attributes("Fabric-Loom-Remap": "true")
+    }
 }
 
 build.dependsOn apiJar
-build.dependsOn remapApiJar
 
 jar {
     from sourceSets.api.output.classesDirs
