--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.4-pre3
-yarn_mappings=1.19.4-pre3+build.3
-loader_version=0.14.17
-fabric_version=0.75.1+1.19.4
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.2
+loader_version=0.14.19
+fabric_version=0.79.0+1.19.4
 
 # Mod Properties
 mod_version=0.4.10
