--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.1
-loader_version=0.14.17
-fabric_version=0.75.3+1.19.4
+minecraft_version=1.20-pre1
+yarn_mappings=1.20-pre1+build.1
+loader_version=0.14.19
+fabric_version=0.80.1+1.20
 
 # Mod Properties
 mod_version=0.4.10
