--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.20-pre6
-yarn_mappings=1.20-pre6+build.2
+minecraft_version=1.20-rc1
+yarn_mappings=1.20-rc1+build.1
 loader_version=0.14.21
-fabric_version=0.82.1+1.20
+fabric_version=0.83.0+1.20
 
 # Mod Properties
 mod_version=0.4.10
