--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,5 @@ blank_issues_enabled: true
 contact-links:
   - name: Join our Discord community.
     url: https://jellysquid.me/discord
-    about: Get installation help and technical support with all of our mods. # Copied from https://github.com/CaffeineMC/sodium-fabric#community
+    about: Get installation help and technical support with all of our mods.
+    # Copied from https://github.com/CaffeineMC/sodium-fabric#community
