--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
-blank_issues_enabled: true
-contact-links:
+blank_issues_enabled: false
+contact_links:
   - name: Join our Discord community.
     url: https://jellysquid.me/discord
     about: Get installation help and technical support with all of our mods.
