--- a/.github/ISSUE_TEMPLATE/CRASH_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/CRASH_REPORT.yml
@@ -1,5 +1,5 @@
 name: Crash report
-description: "Use this template if your game is crashing or failing to start correctly"
+description: "Use this template if your game is crashing or failing to start correctly."
 labels:
   - T-crash
   - S-needs-triage
