link to caffeinemc.net.

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 blank_issues_enabled: true
 contact_links:
   - name: Join our Discord community.
-    url: https://jellysquid.me/discord
+    url: https://caffeinemc.net/discord
     about: Get installation help and technical support with all of our mods.
     # Copied from https://github.com/CaffeineMC/sodium-fabric#community
