--- a/.github/ISSUE_TEMPLATE/CRASH_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/CRASH_REPORT.yml
@@ -99,9 +99,9 @@ body:
     attributes:
       label: Crash Report file
       description: >-
-        Upload your crash report file as an attachment to this issue (drag-and-drop) or to a service such as [mclo.gs](https://mclo.gs/)
+        Upload your crash report file as an attachment to this issue (drag-and-drop) or to [GitHub Gist](https://gist.github.com/)
         (paste a link) and replace this section. This information is critical in resolving your issue!
-        
+
         Messages like "Exit code 0" from your launcher are not what you're looking for. If your launcher does not
         provide a button to view the most recent crash report, check your game's `crash-reports` folder for the most recent
         crash report file.
