Update Gradle version and build script dependencies
We're now pinning a specific version of Fabric Loom
to make the build scripts faster and more deterministic.

This also adds a backup Maven server for resolving
the build script dependencies, to avoid breakages
when JCenter's Bintray is offline.

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ pluginManagement {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
+        mavenCentral() // backup mirror for JCenter's Bintray, which is ordinarily used to resolve Eclipse's JGit
         gradlePluginPortal()
     }
 }
