--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,21 @@
 import net.fabricmc.loom.task.RemapJarTask
 
 plugins {
-    id 'fabric-loom' version '1.2-SNAPSHOT'
-    id 'io.github.juuxel.loom-quiltflower' version '1.10.0'
-    id 'org.ajoberstar.grgit' version '4.1.0'
+    // Unlike most projects, we choose to pin the specific version of Loom.
+    // This prevents a lot of issues where the build script can fail randomly because the Fabric Maven server
+    // is not reachable for some reason, and it makes builds much more reproducible. Observation also shows that it
+    // really helps to improve startup times on slow connections.
+    id 'fabric-loom' version '1.3.8'
+
+    // Vineflower is a fork of the FernFlower decompiler which contains many enhancements and bug fixes, and generally
+    // produces much better source code. The Minecraft sources can be decompiled using it with the
+    // "genSourcesWithVineflower" task.
+    // (Note: Quiltflower was renamed to Vineflower in early July 2023.)
+    id 'io.github.juuxel.loom-vineflower' version '1.11.0'
+
+    // This dependency is only used to determine the state of the Git working tree so that build artifacts can be
+    // more easily identified. TODO: Lazily load GrGit via a service only when builds are performed.
+    id 'org.ajoberstar.grgit' version '5.0.0'
 }
 
 apply from: "${rootProject.projectDir}/gradle/fabric.gradle"
