Use Git ref in identifiers for snapshot builds

--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -32,7 +32,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-build-snapshot-
       - name: Build artifacts
-        run: ./gradlew build -Pbuild.snapshot=true
+        run: ./gradlew build
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
