(WIP) Transition to morton indices in one large buffer, lots of optimizations, better fog culling, compact visibility model

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ tasks.register('remapApiJar', RemapJarTask) {
 
 build.dependsOn apiJar
 build.dependsOn remapApiJar
-build.dependsOn buildNatives
+//build.dependsOn buildNatives
 
 jar {
     from sourceSets.api.output.classesDirs
