finish frustum and fog culling, branchless checking, start work on bfs (still wip)

--- a/native/core/Cargo.toml
+++ b/native/core/Cargo.toml
@@ -17,7 +17,7 @@ lto = "thin"
 [profile.asm]
 inherits = "release"
 panic = "abort"
-debug = true
+debug = false
 lto = "off"
 
 [profile.production]
