--- a/.github/workflows/moderate-issue.yml
+++ b/.github/workflows/moderate-issue.yml
@@ -14,6 +14,6 @@ jobs:
           script: |
             const LOG_FILE_REGEX = "### Log File[\n \t]+\[latest.log\]\(https:\/\/github\.com\/\w+\/sodium-fabric\/files\/\d+\/latest.log\)";
             
-            if (LOG_FILE_REGEX.test(context.issue().payload.body)) {
+            if (LOG_FILE_REGEX.test(context.issue.payload.body)) {
                 console.log("Log file found!")
             }
