--- a/.github/workflows/moderate-issue.yml
+++ b/.github/workflows/moderate-issue.yml
@@ -3,6 +3,7 @@ on:
   issues:
     types:
       - opened
+      - reopened
 jobs:
   moderate:
     runs-on: ubuntu-latest
@@ -14,6 +15,6 @@ jobs:
           script: |
             const LOG_FILE_REGEX = "### Log File[\n \t]+\[latest.log\]\(https:\/\/github\.com\/\w+\/sodium-fabric\/files\/\d+\/latest.log\)";
             
-            if (LOG_FILE_REGEX.test(context.issue.payload.body)) {
+            if (LOG_FILE_REGEX.test(context.payload.issue.body)) {
                 console.log("Log file found!")
             }
