--- a/.github/workflows/moderate-issue.yml
+++ b/.github/workflows/moderate-issue.yml
@@ -15,7 +15,7 @@ jobs:
           script: |
             const LOG_FILE_REGEX = /### Log File[\n \t]+\[latest.log\]\(https:\/\/github\.com\/\w+\/sodium-fabric\/files\/\d+\/latest.log\)/
 
-            if (!LOG_FILE_REGEX.test(a_str)) {
+            if (!LOG_FILE_REGEX.test(context.payload.issue.body)) {
                 await github.rest.issues.get({
                   issue_number: context.issue.number,
                   owner: context.repo.owner,
